Provide kotlin bootstrap source options

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ org.gradle.parallel=false
 org.gradle.configureondemand=false
 org.gradle.jvmargs=-Xmx1000m -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled
 
-bootstrap.kotlin.repo=https://dl.bintray.com/kotlin/kotlin-dev
-bootstrap.kotlin.version=1.1.50-dev-1451
+#bootstrap.kotlin.repo=https://dl.bintray.com/kotlin/kotlin-dev
+#bootstrap.kotlin.version=1.1.50-dev-1451
 #signingRequired=true
